test/tests/compiler/16_characters_and_strings/invalid_types/string_initializer_too_long_static.plx
#  You can't initialize a char array (including a static one)
#  * from a string literal that's too long to fit in it 
pub fn main(none) i32 {
    data too_long: [3]char = "abcd"
    return 0
}
